--- a/dot_oh-my-zsh/custom/notion.zsh.tmpl
+++ b/dot_oh-my-zsh/custom/notion.zsh.tmpl
@@ -1,3 +1,3 @@
 export NOTION_TOKEN={{ onepasswordRead "op://io652a3em2nuuluyxtj3764htm/Notion Token/password" }}
 
-# vim: ft=bash
+# vim: ft=go-template
