--- a/run_onchange_fortune.sh.tmpl
+++ b/run_onchange_fortune.sh.tmpl
@@ -1,27 +1,18 @@
 #!/bin/zsh
 
-# bettercmd hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/bettercmd" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/bettercmd" }} ~/.local/share/fortune/bettercmd.dat
-
-# bioinfo hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/bioinfo" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/bioinfo" }} ~/.local/share/fortune/bioinfo.dat
-
-# font hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/font" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/font" }} ~/.local/share/fortune/font.dat
-
-# git hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/git" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/git" }} ~/.local/share/fortune/git.dat
-
-# lang_python hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/lang_python" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/lang_python" }} ~/.local/share/fortune/lang_python.dat
-
-# regex hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/regex" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/regex" }} ~/.local/share/fortune/regex.dat
-
-# vim hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/vim" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/vim" }} ~/.local/share/fortune/vim.dat
-
-# lang_bash hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune/lang_bash" ) | sha256sum }}
-strfile -s {{ joinPath .chezmoi.sourceDir "dot_local/share/fortune/lang_bash" }} ~/.local/share/fortune/lang_bash.dat
+# bettercmd hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/bettercmd" ) | sha256sum }}
+# bioinfo hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/bioinfo" ) | sha256sum }}
+# chezmoi hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/chezmoi" ) | sha256sum }}
+# cmd_sed hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/cmd_sed" ) | sha256sum }}
+# font hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/font" ) | sha256sum }}
+# git hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/git" ) | sha256sum }}
+# lang_bash hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/lang_bash" ) | sha256sum }}
+# lang_python hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/lang_python" ) | sha256sum }}
+# lang_rust hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/lang_rust" ) | sha256sum }}
+# lang_web hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/lang_web" ) | sha256sum }}
+# regex hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/regex" ) | sha256sum }}
+# ui_apps hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/ui_apps" ) | sha256sum }}
+# vim hash: {{ include ( joinPath .chezmoi.sourceDir "dot_local/share/fortune_modules/vim" ) | sha256sum }}
+strfile -i -r -s "$HOME/.local/share/fortune/merged" "$HOME/.local/share/fortune/merged.dat"
 
 # vim: ft=go-template
