--- a/run_onchange_fortune.sh.tmpl
+++ b/run_onchange_fortune.sh.tmpl
@@ -5,3 +5,5 @@
 # {{ base $file }} hash: {{ include $file | sha256sum }}
 {{ end }}
 strfile -i -r -s "$HOME/.local/share/fortune/merged" "$HOME/.local/share/fortune/merged.dat"
+
+# vim: ft=plaintext
