--- a/run_onchange_install_vim_plugins.sh.tmpl
+++ b/run_onchange_install_vim_plugins.sh.tmpl
@@ -3,3 +3,5 @@
 # install via Vundle
 # vimrc: hash: {{ include ( joinPath .chezmoi.sourceDir "dot_vimrc" ) | sha256sum }}
 vim +PlugInstall +qall
+
+# vim: ft=shellscript
